--- a/To Explore Supervised Machine Learning.ipynb
+++ b/To Explore Supervised Machine Learning.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size = 5 color = 'green'>\n",
-    "    <b>EXPLORING DATA</b>\n",
-    "    </font>"
+    "# EXPLORING DATA\n"
    ]
   },
   {
@@ -182,7 +180,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size = 5 color = 'green'> <b> DEVELOP MODEL </b> </font>"
+    "# DEVELOP MODEL "
    ]
   },
   {
@@ -269,7 +267,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size = 5 color = 'green'> <b> PREDICTIONS </b> </font>"
+    "# PREDICTIONS "
    ]
   },
   {
@@ -484,7 +482,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size = 5 color = 'green'> <b> EVALUATE MODEL </b> </font>"
+    "# EVALUATE MODEL "
    ]
   },
   {
